fixed padding on mobile slider

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -193,7 +193,7 @@ section.how-it-works{
         .swiper {
             width: 100%;
             height: 100%;
-            padding-bottom: 20px;
+            padding-bottom: 40px;
           }
     
           .swiper-slide {
